========================
Changes between versions
========================

0.2
===

User visible:
  - improved documentation

Bugs:
  - consider dependencies broken in the case of a version conflict

Organisation:
  - fixed handling of tl namespace package


0.1
===

initial release