@@ -2,7 +2,7 @@
 # See also LICENSE.txt
 
 
-def print_dot(graph, cluster=False):
+def print_dot(graph, cluster=False, print_version=False):
     direct_deps = set()
     for name in graph.roots:
         direct_deps.update(graph[name])
@@ -10,7 +10,11 @@ def print_dot(graph, cluster=False):
     print "digraph {"
 
     for node in graph.itervalues():
-        node_options = dict(label=node.name)
+        node_options = {}
+        if print_version and node.dist:
+            node_options["label"] = "%s %s" % (node.name, node.dist.version)
+        else:
+            node_options["label"] = node.name
 
         def fill(color):
             node_options["style"] = "filled"
